[tool.poetry]
name = "habithelper"
version = "0.1.0"
description = "Трекер привычек и целей с широким функционалом"
authors = ["melloru <pythonubuntu12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.15.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.36"
aiosqlite = "^0.20.0"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
